imclient/marslib/include/WFClient.h



//general function callback
typedef void (WFCAPI *fun_general_void_success_callback)(void *pObject, int objectDataType);

typedef void (WFCAPI *fun_general_string_success_callback)(void *pObject, int objectDataType, const char *cval, size_t val_len);

typedef void (WFCAPI *fun_general_error_callback)(void *pObject, int objectDataType, int errorCode);


extern "C" PROTOWRAPPER_API void WFCAPI clearUnreadFriendRequestStatus();


extern "C" PROTOWRAPPER_API bool WFCAPI clearFriendRequest(int direction, int64_t beforeTime);

extern "C" PROTOWRAPPER_API bool WFCAPI deleteFriendRequest(const char *cuserId, size_t userId_len, int direction);


extern "C" PROTOWRAPPER_API void WFCAPI deleteFriend(const char *cuserId, size_t userId_len, fun_general_void_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getFriendAlias(const char *cuserId, size_t userId_len, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI setFriendAlias(const char *cuserId, size_t userId_len, const char *calias, size_t alias_len, fun_general_void_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getFriendExtra(const char *cuserId, size_t userId_len, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI sendFriendRequest(const char *cuserId, size_t userId_len, const char *creason, size_t reason_len, const char *cextra, size_t extra_len, fun_general_void_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI handleFriendRequest(const char *cuserId, size_t userId_len, bool accept, const char *cextra, size_t extra_len, fun_general_void_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isBlackListed(const char *cuserId, size_t userId_len);


extern "C" PROTOWRAPPER_API const char* WFCAPI getBlackList(bool refresh, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI setBlackList(const char *cuserId, size_t userId_len, bool isBlackListed, fun_general_void_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getGroupMembers(const char *cgroupId, size_t groupId_len, bool refresh, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getGroupMembersByType(const char *cgroupId, size_t groupId_len, int type, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getGroupMembersByCount(const char *cgroupId, size_t groupId_len, int count, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getGroupInfo(const char *cgroupId, size_t groupId_len, bool refresh, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getGroupMember(const char *cgroupId, size_t groupId_len, const char *cmemberId, size_t memberId_len, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI createGroup(const char *cgroupId, size_t groupId_len, int groupType, const char *cgroupName, size_t groupName_len, const char *cgroupPortrait, size_t groupPortrait_len, const char *cgroupExtra, size_t groupExtra_len, const char** cusers, const size_t* userLengths, size_t userCount, const char *cmemberExtra, size_t memberExtra_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_string_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI addMembers(const char *cgroupId, size_t groupId_len, const char** cusers, const size_t* userLengths, size_t userCount, const char *cmemberExtra, size_t memberExtra_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI kickoffMembers(const char *cgroupId, size_t groupId_len, const char** cusers, const size_t* userLengths, size_t userCount, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI quitGroup(const char *cgroupId, size_t groupId_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI dismissGroup(const char *cgroupId, size_t groupId_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI modifyGroupInfo(const char *cgroupId, size_t groupId_len, int type, const char *cnewValue, size_t newValue_len, const int alines[], int lines_len, const char *cstrCont, size_t strCont_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);