imclient/lib/src/ffi/wfclient_bindings.dart


  late final void Function() clearUnreadFriendRequestStatus =
      _lib.lookupFunction<Void Function(), void Function()>('clearUnreadFriendRequestStatus');

  late final bool Function(int, int) clearFriendRequest =
      _lib.lookupFunction<Bool Function(Int32, Int64), bool Function(int, int)>('clearFriendRequest');

  late final bool Function(Pointer<Char>, int, int) deleteFriendRequest =
      _lib.lookupFunction<Bool Function(Pointer<Char>, Size, Int32), bool Function(Pointer<Char>, int, int)>('deleteFriendRequest');

  late final void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) deleteFriend =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('deleteFriend');

  late final Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>) getFriendAlias =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>)>('getFriendAlias');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setFriendAlias =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setFriendAlias');

  late final Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>) getFriendExtra =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>)>('getFriendExtra');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) sendFriendRequest =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('sendFriendRequest');

  late final void Function(Pointer<Char>, int, bool, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) handleFriendRequest =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('handleFriendRequest');

  late final bool Function(Pointer<Char>, int) isBlackListed =
      _lib.lookupFunction<Bool Function(Pointer<Char>, Size), bool Function(Pointer<Char>, int)>('isBlackListed');

  late final Pointer<Char> Function(bool, Pointer<Size>) getBlackList =
      _lib.lookupFunction<Pointer<Char> Function(Bool, Pointer<Size>), Pointer<Char> Function(bool, Pointer<Size>)>('getBlackList');

  late final void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setBlackList =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setBlackList');

  late final Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>) getGroupMembers =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Bool, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>)>('getGroupMembers');

  late final Pointer<Char> Function(Pointer<Char>, int, int, Pointer<Size>) getGroupMembersByType =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Int32, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, int, Pointer<Size>)>('getGroupMembersByType');

  late final Pointer<Char> Function(Pointer<Char>, int, int, Pointer<Size>) getGroupMembersByCount =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Int32, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, int, Pointer<Size>)>('getGroupMembersByCount');

  late final Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>) getGroupInfo =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Bool, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>)>('getGroupInfo');

  late final Pointer<Char> Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Size>) getGroupMember =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Size>)>('getGroupMember');

  late final void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) createGroup =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('createGroup');

  late final void Function(Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) addMembers =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('addMembers');

  late final void Function(Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) kickoffMembers =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('kickoffMembers');

  late final void Function(Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) quitGroup =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('quitGroup');

  late final void Function(Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) dismissGroup =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('dismissGroup');

  late final void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) modifyGroupInfo =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<Char>, Size, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('modifyGroupInfo');
